k8s/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-backend
spec:
  containers:
  - name: debug-container
    image: 397920213006.dkr.ecr.us-east-1.amazonaws.com/instamart-backend:v1
    command: ["sleep", "3600"]
  restartPolicy: Never
