k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: instamart-backend
 labels:
  app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
     containers:
     - name: backend
       image: 397920213006.dkr.ecr.us-east-1.amazonaws.com/instamart-backend:v3
       ports:
       - containerPort: 8080
         name: http
