k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: instamart-backend-svc
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
   app: backend
  ports:
   - protocol: TCP
     port: 80
     targetPort: 8080
